--- a/Week 3/todo/main/templates/main/todo_list.html
+++ b/Week 3/todo/main/templates/main/todo_list.html
@@ -2,17 +2,37 @@
 <link rel="stylesheet" type="text/css" href="{% static 'main/style.css' %}">
 <div id="preset">BFDjango TODO</div>
 <div class="container">
-	<input type="button" id="addTask" value="Add List">
+	<input type="button" id="addTask" value="Add Task">
 	<hr/>
-	<h1>Created Lists</h1>
-	{% if latest_task_list %}
-		<ul>
-			{% for task_list in latest_task_list %}
-				<li><a href="{% url 'main:detail' task_list.id %}">{{ task_list.task_list_name }}</a></li>
-			{% endfor %}
-		</ul>
+	{% if task_list %}
+		<h1>Completed tasks in {{task_list.list_name}}</h1>
+			<table style="width:100%" class="table">
+				<tr class="column_names">
+					<th>Task</th>
+					<th>Created</th>
+					<th>Due on</th>
+					<th>Owner</th>
+					<th>Mark</th>
+				</tr>
+				{% for ts in task_list.task_set.all %}
+					<tr class="columns">
+						<td id="task">Task {{ ts.task_order }}</td>
+						<td>{{ ts.created_at|date:"d/m/y" }}</td>
+						<td>{{ ts.due_on|date:"d/m/y" }}</td>
+						<td>{{ ts.owner }}</td>
+						<td id="mark">
+							{% if ts.mark %}
+								Done
+							{% else %}
+								Not Done
+							{% endif %}
+						</td>
+					</tr>
+				{% endfor %}
+			</table>
+		<input type="button" id="view" value="View completed tasks">
 		<input type="button" id="delete" value="Delete this list">
 	{% else %}
-		<p>No lists are available.</p>
+		<p>No tasks are available.</p>
 	{% endif %}
 </div>
